[gd_scene load_steps=5 format=3 uid="uid://bpvftdaflisum"]

[ext_resource type="Script" uid="uid://2jmof7so71i3" path="res://scripts/one_way_tp.gd" id="1_07f6v"]
[ext_resource type="Texture2D" uid="uid://dxqp6bpnrxjed" path="res://sprites/one_way_tp.png" id="2_07f6v"]
[ext_resource type="PackedScene" uid="uid://hgxycof3aq14" path="res://scenes/connector.tscn" id="3_abrph"]
[ext_resource type="Texture2D" uid="uid://c0a5vgb7wnlh1" path="res://sprites/card_frame.png" id="4_q18v1"]

[node name="OneWayTp" type="Node2D"]
script = ExtResource("1_07f6v")

[node name="TpSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_07f6v")

[node name="Connector" parent="." instance=ExtResource("3_abrph")]

[node name="ConnectedCards" type="Node2D" parent="."]

[node name="TpHighlight" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_q18v1")

[connection signal="child_entered_tree" from="ConnectedCards" to="." method="_on_connected_cards_child_entered_tree"]
